# native-bench-arkworks

./: Cargo.toml  NATIVE-BENCHMARKS-ARKWORKS.md  benchmarks.md  results.json
.github/workflows/: benchmark.yml  check.yml
benches/: arkworks.rs  bench_bls12_377.rs  bench_bls12_381.rs  bench_bw6_761.rs  bench_ed_on_bls12_377.rs  bench_ed_on_bls12_381.rs  bench_ed_on_bls12_381_bandersnatch.rs
src/: bls12_377.rs  bls12_381.rs  bw6_761.rs  ed_on_bls12_377.rs  ed_on_bls12_381.rs  ed_on_bls12_381_bandersnatch.rs  lib.rs  utils.rs
